implement dynamic background image based on weather

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -1801,28 +1801,80 @@
           "parents": [],
           "type": "sass"
         },
-        "c8efeafd": {
-          "id": "c8efeafd",
-          "path": "assets/img/stag.jpeg",
-          "output": "assets/img/stag.jpeg",
-          "name": "stag.jpeg",
+        "3e0d4d96": {
+          "id": "3e0d4d96",
+          "path": "assets/img/broken_clouds.jpg",
+          "output": "assets/img/broken_clouds.jpg",
+          "name": "broken_clouds.jpg",
           "category": "IMAGE",
-          "size": 1043375,
-          "type": "jpeg",
-          "initialSize": 1043375,
+          "size": 543134,
+          "type": "jpg",
+          "initialSize": 543134,
           "optimized": false,
           "height": 0,
           "width": 0
         },
-        "75abd7f5": {
-          "id": "75abd7f5",
-          "path": "assets/img/sky.jpg",
-          "output": "assets/img/sky.jpg",
-          "name": "sky.jpg",
+        "d3c27a6c": {
+          "id": "d3c27a6c",
+          "path": "assets/img/clear.jpg",
+          "output": "assets/img/clear.jpg",
+          "name": "clear.jpg",
           "category": "IMAGE",
-          "size": 15527,
+          "size": 335445,
           "type": "jpg",
-          "initialSize": 15527,
+          "initialSize": 335445,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "cb817e0a": {
+          "id": "cb817e0a",
+          "path": "assets/img/mist.jpg",
+          "output": "assets/img/mist.jpg",
+          "name": "mist.jpg",
+          "category": "IMAGE",
+          "size": 298429,
+          "type": "jpg",
+          "initialSize": 298429,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "d718c607": {
+          "id": "d718c607",
+          "path": "assets/img/rain.jpg",
+          "output": "assets/img/rain.jpg",
+          "name": "rain.jpg",
+          "category": "IMAGE",
+          "size": 394731,
+          "type": "jpg",
+          "initialSize": 394731,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "f8cfade4": {
+          "id": "f8cfade4",
+          "path": "assets/img/thunderstorm.jpg",
+          "output": "assets/img/thunderstorm.jpg",
+          "name": "thunderstorm.jpg",
+          "category": "IMAGE",
+          "size": 165058,
+          "type": "jpg",
+          "initialSize": 165058,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "0a5111ef": {
+          "id": "0a5111ef",
+          "path": "assets/img/snowy.jpg",
+          "output": "assets/img/snowy.jpg",
+          "name": "snowy.jpg",
+          "category": "IMAGE",
+          "size": 1558722,
+          "type": "jpg",
+          "initialSize": 1558722,
           "optimized": false,
           "height": 0,
           "width": 0
